# rechecker-plugin

./: .gitignore  .mega-linter.yml  CHANGELOG.md  README.md  cliff.toml  pyproject.toml  rck-20260322_174436_c836d0-report.md  rck-20260322_175118_c836d0-report.md  rck-20260322_220207_main-report.md  rck-20260323_081739_main-report.md  rck-20260323_084432_main-report.md  rck-20260323_084445_main-report.md  rechecker-report-20260321_142917.md  rechecker-report-20260321_144511.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  notify-marketplace.yml  release.yml  validate.yml
.serena/: project.yml
agents/: adversarial-auditor.md  big-files-auditor.md  code-reviewer.md  functionality-reviewer.md  lint-filter.md  opus-code-reviewer.md  opus-functionality-reviewer.md  recheck-orchestrator.md  rechecker-orchestrator.md  sonnet-code-fixer.md
git-hooks/: pre-push
hooks/: hooks.json
rules/: recheck-after-commit.md
scripts/: _background_review.py  _shared.py  changed-files.py  changed-files.sh  check-after-commit.sh  count-tokens.py  example_util.py  finalize-session.py  log-stop-failure.py  log-stop-failure.sh  log-subagent-tokens.py  merge-worktrees.sh  pipeline.py  publish.py  recheck.py  recheck.sh  rechecker.py  rechecker.sh  resume-check.py  review-loop.py  review-loop.sh  sample_task_queue.py  scan.sh  triage.py
scripts/git-hooks/: pre-push
skills/recheck/: SKILL.md  lint-commands.md  review-passes.md
tests/: test_pipeline.py  test_scripts_smoke.py
